add delay to fadeIn

--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -79,7 +79,7 @@ title: Jamie Kwan | Experience Design & Strategy
 				{% for image in page.images %}
 				<div class="row">
 					
-					<div class="col-sm-6 col-sm-offset-3 img-fluid wow fadeIn">
+					<div class="col-sm-6 col-sm-offset-3 img-fluid wow fadeIn" data-wow-delay="0.2s">
 						<p>
 							<img src="{{ image.image_path }}" alt="{{ image.title }}">
 						</p>
