remove fadeInUp from project details and intro

--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -40,7 +40,7 @@ title: Jamie Kwan | Experience Design & Strategy
 
 					<div class="col-sm-4 col-m-4 col-xl-4">
 
-						<div class="work-details wow fadeInUp">
+						<div class="work-details">
 							<h3 class="work-details-title font-alt">Project Details</h3>
 							<ul>
 								{% for text in page.client %}<li class="font-inc"><strong>Client: </strong>{{page.client}}</li>{% endfor %}
@@ -50,7 +50,7 @@ title: Jamie Kwan | Experience Design & Strategy
 
 					</div>
 
-					<div class="col-sm-6 col-sm-offset-2 col-m-6 col-m-offset-2 col-xl-6 col-xl-offset-2 wow fadeInUp">
+					<div class="col-sm-6 col-sm-offset-2 col-m-6 col-m-offset-2 col-xl-6 col-xl-offset-2">
 						{{ content }}
 					</div>
 
