--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -109,9 +109,9 @@
 				<div class="col-sm-12 col-md-6 text-right">
 					<p class="copyright font-inc m-b-0">
 						<ul class="list-inline social-icons">
-							<li><a href="http://www.facebook.com/jamiemkwan" target="_blank"><i class="fa fa-facebook"></i></a></li>
-							<li><a href="http://www.twitter.com/jamiemkwan" target="_blank"><i class="fa fa-twitter"></i></a></li>
-                            <li><a href="http://www.instagram.com/jamiemkwan" target="_blank"><i class="fa fa-instagram"></i></a></li>
+							<li><a href="https://www.facebook.com/jamiemkwan" target="_blank"><i class="fa fa-facebook"></i></a></li>
+							<li><a href="https://www.twitter.com/jamiemkwan" target="_blank"><i class="fa fa-twitter"></i></a></li>
+                            <li><a href="https://www.instagram.com/jamiemkwan" target="_blank"><i class="fa fa-instagram"></i></a></li>
                             <li><a href="https://www.linkedin.com/in/jamiemkwan/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
                             <li><a href="mailto:jamie@studiobud.ca?subject=Hello!"><i class="fa fa-envelope"></i></a></li>
 						</ul>
@@ -133,9 +133,9 @@
 				<div class="col-sm-12 col-md-6 text-center">
 					<p class="copyright font-inc m-b-0">
 						<ul class="list-inline social-icons">
-							<li><a href="http://www.facebook.com/jamiemkwan" target="_blank"><i class="fa fa-facebook"></i></a></li>
-							<li><a href="http://www.twitter.com/jamiemkwan" target="_blank"><i class="fa fa-twitter"></i></a></li>
-                            <li><a href="http://www.instagram.com/jamiemkwan" target="_blank"><i class="fa fa-instagram"></i></a></li>
+							<li><a href="https://www.facebook.com/jamiemkwan" target="_blank"><i class="fa fa-facebook"></i></a></li>
+							<li><a href="https://www.twitter.com/jamiemkwan" target="_blank"><i class="fa fa-twitter"></i></a></li>
+                            <li><a href="https://www.instagram.com/jamiemkwan" target="_blank"><i class="fa fa-instagram"></i></a></li>
                             <li><a href="https://www.linkedin.com/in/jamiemkwan/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
                             <li><a href="mailto:jamie@studiobud.ca?subject=Hello!"><i class="fa fa-envelope"></i></a></li>
 						</ul>
@@ -165,7 +165,7 @@
 	<script src="assets/js/appear.js"></script>
 	<script src="assets/js/jquery.simple-text-rotator.min.js"></script>
 	<script src="assets/js/jqBootstrapValidation.js"></script>
-	<script src="http://maps.google.com/maps/api/js?sensor=true"></script>
+	<script src="https://maps.google.com/maps/api/js?sensor=true"></script>
 	<script src="assets/js/gmaps.js"></script>
 	<script src="assets/js/isotope.pkgd.min.js"></script>
 	<script src="assets/js/imagesloaded.pkgd.js"></script>
