--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -80,7 +80,7 @@
 						<li><a href="https://jamiemkwan.com">Home</a></li>
 						<li><a href="/about">About</a></li>
 						<li><a href="https://medium.com/design-on-the-mind" target="_blank">Ideas</a></li>
-						<li><a href="mailto:jamie@studiobud.ca?Subject=Hello!" target="_top">Contact</a></li>
+						<li><a href="mailto:jamie@studiobud.ca?Subject=Hello!" target="_top">Say Hello!</a></li>
 		
 					</ul>
 				</div>
