--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -85,13 +85,13 @@ title: Jamie Kwan | Experience Design & Strategy
 						</p>
 					</div>
 
-<!-- 				{% for text in image.caption-right %}
+					{% for text in image.caption-right %}
 
-					<div class="col-sm-2 align-items-end">
-						<p class="image-caption"><strong>Left:</strong><br>{{ image.caption-right }}</p>
-					</div>
+						<div class="col-sm-2 align-items-end">
+							<p class="image-caption"><strong>Left:</strong><br>{{ image.caption-right }}</p>
+						</div>
 
-					{% endfor %} -->
+					{% endfor %}
 
 				</div>
 				{% endfor %}
