test - vertical justification caption

--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -90,7 +90,7 @@ title: Jamie Kwan | Experience Design & Strategy
 
 					{% for text in image.caption-right %}
 
-						<div class="col-sm-2 align-items-end">
+						<div class="col-sm-2 align-text-bottom ">
 							<p class="image-caption"><strong>Left:</strong><br>{{ image.caption-right }}</p>
 						</div>
 
