Align div to bottom of img

--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -90,7 +90,7 @@ title: Jamie Kwan | Experience Design & Strategy
 
 					{% for text in image.caption-right %}
 
-						<div class="col-sm-2 align-text-bottom ">
+						<div class="col-sm-2 align-self-end">
 							<p class="image-caption"><strong>Left:</strong><br>{{ image.caption-right }}</p>
 						</div>
 
