apply align-self-end to row

--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -77,7 +77,7 @@ title: Jamie Kwan | Experience Design & Strategy
 				{% endfor %} -->
 
 				{% for image in page.images %}
-				<div class="row">
+				<div class="row align-self-end">
 					
 					<div class="col-sm-6 col-sm-offset-3 img-fluid wow fadeIn" data-wow-delay="0.2s">
 						<p>
@@ -90,7 +90,7 @@ title: Jamie Kwan | Experience Design & Strategy
 
 					{% for text in image.caption-right %}
 
-						<div class="col-sm-2 align-self-end">
+						<div class="col-sm-2">
 							<p class="image-caption"><strong>Left:</strong><br>{{ image.caption-right }}</p>
 						</div>
 
