--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -77,27 +77,31 @@ title: Jamie Kwan | Experience Design & Strategy
 				{% endfor %} -->
 
 				{% for image in page.images %}
-				<div class="row align-self-end">
+				<div class="row">
 					
 					<div class="col-sm-6 col-sm-offset-3 img-fluid wow fadeIn" data-wow-delay="0.2s">
 						<p>
 							<img src="{{ image.image_path }}" alt="{{ image.title }}">
 						</p>
-						{% for text in image.body-text %}
-							<p>{{ image.body-text }}</p>
-						{% endfor %}
 					</div>
 
-					{% for text in image.caption-right %}
+<!-- 					{% for text in image.caption-right %}
 
 						<div class="col-sm-2">
 							<p class="image-caption"><strong>Left:</strong><br>{{ image.caption-right }}</p>
 						</div>
 
-					{% endfor %}
-
-
+					{% endfor %} -->
 				</div>
+
+				{% for text in image.body-text %}
+					<div class="row">
+						<div class="col-sm8 col-sm-offset-2">
+							<p>{{ image.body-text }}</p>
+						</div>
+					</div>
+				{% endfor %}
+
 				{% endfor %}
 
 			</div>
