change body-heading styling

--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -96,8 +96,8 @@ title: Jamie Kwan | Experience Design & Strategy
 
 				{% for text in image.body-text %}
 					<div class="row">
-						<div class="col-sm-8 col-sm-offset-2">
-							<h2>{{ image.body-heading }}</h2>
+						<div class="col-sm-8 col-sm-offset-2 wow fadeIn">
+							<h3 class="work-details-title font-alt">{{ image.body-heading }}</h3>
 							<p>{{ image.body-text }}</p>
 						</div>
 					</div>
