--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -90,7 +90,7 @@ title: Jamie Kwan | Experience Design & Strategy
 							<p class="image-caption"><strong>Left:</strong><br>{{ image.caption-right }}</p>
 						</div>
 					{% endfor %}
-					
+
 				</div>
 
 				{% for text in image.body-text %}
@@ -110,6 +110,10 @@ title: Jamie Kwan | Experience Design & Strategy
 
 		</section>
 		<!-- /PORTFOLIO CONTENT -->
+		
+		<!-- DIVIDER -->
+		<hr class="divider-w">
+		<!-- /DIVIDER -->
 
 		<!-- PAGINATION -->
 		<section class="module-small p-t-50">
