move body-text above image

--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -77,32 +77,34 @@ title: Jamie Kwan | Experience Design & Strategy
 				{% endfor %} -->
 
 				{% for image in page.images %}
-				<div class="row">
 
-					<div class="col-sm-6 col-sm-offset-3 img-fluid wow fadeIn" data-wow-delay="0.2s">
-						<p>
-							<img src="{{ image.image_path }}" alt="{{ image.title }}">
-						</p>
-					</div>
+					{% for text in image.body-text %}
+					<div class="row">
 
-					{% for text in image.caption-right %}
-						<div class="col-sm-2" id="desktop-only">
-							<p class="image-caption"><strong>Left:</strong><br>{{ image.caption-right }}</p>
+						<div class="col-sm-8 col-sm-offset-2 wow fadeIn">
+							<h3 class="work-details-title font-alt">{{ image.body-heading }}</h3>
+							<p>{{ image.body-text }}</p>
 						</div>
+
+					</div>
 					{% endfor %}
 
-				</div>
+					<div class="row">
 
-				{% for text in image.body-text %}
-				<div class="row">
+						<div class="col-xs-8 col-xs-offset-2 col-sm-6 col-sm-offset-3 img-fluid wow fadeIn" data-wow-delay="0.2s">
+							<p>
+								<img src="{{ image.image_path }}" alt="{{ image.title }}">
+							</p>
+						</div>
 
-					<div class="col-sm-8 col-sm-offset-2 wow fadeIn">
-						<h3 class="work-details-title font-alt">{{ image.body-heading }}</h3>
-						<p>{{ image.body-text }}</p>
+						{% for text in image.caption-right %}
+							<div class="col-xs-2 col-sm-2" id="desktop-only">
+								<p class="image-caption">{{ image.caption-right }}</p>
+							</div>
+						{% endfor %}
+
 					</div>
 
-				</div>
-				{% endfor %}
 
 				{% endfor %}
 
