--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -61,6 +61,10 @@ title: Jamie Kwan | Experience Design & Strategy
 		</section>
 		<!-- /PORTFOLIO DESCRIPTION -->
 
+		<!-- DIVIDER -->
+		<hr class="divider-w">
+		<!-- /DIVIDER -->
+
 		<!-- PORTFOLIO CONTENT -->
 		<section>
 
