--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -100,8 +100,8 @@ title: Jamie Kwan | Experience Design & Strategy
 						</div>
 
 						{% for text in image.caption-right %}
-							<div class="col-xs-2 col-sm-2 image-caption" id="desktop-only">
-								<p class="image-caption">{{ image.caption-right }}</p>
+							<div class="col-xs-2 col-sm-2 imageCaption" id="desktop-only">
+								<p class="imageCaption">{{ image.caption-right }}</p>
 							</div>
 						{% endfor %}
 
