test caption styling

--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -100,7 +100,7 @@ title: Jamie Kwan | Experience Design & Strategy
 						</div>
 
 						{% for text in image.caption-right %}
-							<div class="col-xs-2 col-sm-2 imageCaption" id="desktop-only">
+							<div class="col-xs-2 col-sm-2 imageCaptionLine" id="desktop-only">
 								<p class="imageCaption">{{ image.caption-right }}</p>
 							</div>
 						{% endfor %}
