--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -46,12 +46,12 @@ Place here your custom CSS styles
 	border-bottom: 4px solid rgb(1,111,185);
 }
 
-.imageCaption p{
-	color: 10%;
-	font-size: 10%;
+.imageCaption {
+	font-style: italic;
+	font-size: 12px/1.0;
 }
 
-.imageCaption div{
+.imageCaptionLine {
 	border-top: 7px solid rgb(1,111,185);
 
 }
