--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -55,3 +55,12 @@ Place here your custom CSS styles
 	border-right: 4px solid rgb(1,111,185);
 
 }
+
+.blockquote {
+	border-left: 4px solid rgb(1,111,185);
+}
+
+.blockquote p{
+	font-size: 18px;
+	font-style: normal;
+}
