--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -38,9 +38,9 @@ Place here your custom CSS styles
 	font-size: 20px;
 }
 
-.theme-color span{ 
+/*.theme-color span{ 
 	border-bottom: 4px solid rgb(1,111,185);
-}
+}*/
 
 .imageCaption {
 	font-style: italic;
