--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -66,15 +66,15 @@ title: Jamie Kwan | Experience Design & Strategy
 
 			<div class="container">
 
-				<!-- {% for text in page.video %}
+				{% for text in page.video %}
 				<div class="row">
-					<div class="col-sm-6 col-sm-offset-3  wow fadeInUp">
+					<div class="col-xs-8 col-xs-offset-2 col-sm-6 col-sm-offset-3  wow fadeInUp">
 						<div class="embed-responsive embed-responsive-16by9">
-							<p align="center"><iframe src="{{ video.videoPath }}" width="{{ video.videoWidth }}" height="{{ video.videoHeight }}" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></p>
+							<p align="center"><iframe src="{{ video.videoPath }}" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></p>
 						</div>
 					</div>
 				</div>
-				{% endfor %} -->
+				{% endfor %}
 
 				{% for image in page.images %}
 
