--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -70,7 +70,7 @@ title: Jamie Kwan | Experience Design & Strategy
 				<div class="row">
 					<div class="col-xs-8 col-xs-offset-2 col-sm-6 col-sm-offset-3  wow fadeInUp">
 						<div class="embed-responsive embed-responsive-16by9">
-							<p align="center"><iframe src="{{ video.videoPath }}" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></p>
+							<p align="center"><iframe src="https://player.vimeo.com/video/{{ video.videoPath }}" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></p>
 						</div>
 					</div>
 				</div>
