--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -66,7 +66,7 @@ title: Jamie Kwan | Experience Design & Strategy
 
 			<div class="container">
 
-				{% for text in page.video %}
+				{% for text in page.videoPath %}
 				<div class="row">
 					<div class="col-xs-8 col-xs-offset-2 col-sm-6 col-sm-offset-3  wow fadeInUp">
 						<div class="embed-responsive embed-responsive-16by9">
