--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -70,15 +70,15 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="index.html">Jamie Kwan</a>
+					<a class="navbar-brand" href="https://jamiemkwan.com">Jamie Kwan</a>
 				</div>
 		
 				<div class="collapse navbar-collapse" id="custom-collapse">
 		
 					<ul class="nav navbar-nav navbar-right">
 
-						<li><a href="https://jamiemkwan.com">Home</a></li>
-						<li><a href="/about">About</a></li>
+						<li><a href="https://jamiemkwan.com">Projects</a></li>
+						<li><a href="/about">Profile</a></li>
 						<li><a href="https://medium.com/design-on-the-mind" target="_blank">Ideas</a></li>
 						<li><a href="mailto:jamie@studiobud.ca?Subject=Hello!" target="_top">Say Hello!</a></li>
 		
@@ -127,7 +127,7 @@
 			<div class="row">
 	
 				<div class="col-sm-12 col-md-6 text-center">
-					<p class="copyright font-inc m-b-0">© 2019 <a href="index.html">JAMIE KWAN</a></p>
+					<p class="copyright font-inc m-b-0">© 2019 <a href="https://jamiemkwan.com">JAMIE KWAN</a></p>
 				</div>
 
 				<div class="col-sm-12 col-md-6 text-center">
