--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -68,7 +68,7 @@ title: Jamie Kwan | Experience Design & Strategy
 
 				{% for text in page.videoPath %}
 				<div class="row">
-					<div class="col-xs-8 col-xs-offset-2 col-sm-6 col-sm-offset-3  wow fadeInUp">
+					<div class="col-xs-8 col-xs-offset-2 col-sm-6 col-sm-offset-3 wow fadeIn">
 						<div class="embed-responsive embed-responsive-16by9">
 							<p align="center"><iframe src="https://player.vimeo.com/video/{{page.videoPath}}" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></p>
 						</div>
