--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Inconsolata|Montserrat|Open+Sans" rel="stylesheet">
 
 
-	<!-- ===============    Smooth Scroll Script     =============== -->
+	<!-- ===============    Animated Typed.js Script     =============== -->
 	<script src="assets/js/typed.min.js"></script>
 	<script>
 	    var typed = new Typed('.typed', {
