--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -105,7 +105,7 @@
 		
 					<ul class="nav navbar-nav navbar-right">
 
-						<li><a href="#projects">Projects</a></li>
+						<!-- <li><a href="#projects">Projects</a></li> -->
 						<li><a href="/about">Profile</a></li>
 						<li><a href="https://medium.com/design-on-the-mind" target="_blank">Ideas</a></li>
 						<li><a href="mailto:jamie@studiobud.ca?Subject=Hello!" target="_top">Say Hello!</a></li>
@@ -155,7 +155,7 @@
 			<div class="row">
 	
 				<div class="col-sm-12 col-md-6 text-center">
-					<p class="copyright font-inc m-b-0">© 2019 <a href="https://www.jamiemkwan.com">JAMIE KWAN</a></p>
+					<p class="copyright font-inc m-b-0">© 2019 <a href="http://www.jamiemkwan.com">JAMIE KWAN</a></p>
 				</div>
 
 				<div class="col-sm-12 col-md-6 text-center">
