fix profile link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -106,7 +106,7 @@
 					<ul class="nav navbar-nav navbar-right">
 
 						<!-- <li><a href="#projects">Projects</a></li> -->
-						<li><a href="/about">Profile</a></li>
+						<li><a href="/profile">Profile</a></li>
 						<li><a href="https://medium.com/design-on-the-mind" target="_blank">Ideas</a></li>
 						<li><a href="mailto:jamie@studiobud.ca?Subject=Hello!" target="_top">Say Hello!</a></li>
 		
